fix: Remove extra space at the bottom of page

--- a/sass/site.scss
+++ b/sass/site.scss
@@ -193,6 +193,10 @@ body {
       max-height: 1em;
     }
 
+    p {
+      margin-bottom: 0;
+    }
+
     svg {
       width: 1.5rem;
       height: 1.5rem;
